service_mesh/envoy_route_example.yaml
static_resources:
  listeners:
    - name: kubepulse_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                stat_prefix: kubepulse_ingress
                route_config:
                  virtual_hosts:
                    - name: kubepulse
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: kubepulse_service
                            timeout: 3s
  clusters:
    - name: kubepulse_service
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: kubepulse_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: kubepulse
                      port_value: 8000
